[package]
name = "frame-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
bson = { version = "2", features = ["chrono-0_4"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = "0.4"
urlencoding = "2.1.0"
tokio-stream = { version = "0.1.15", features = ["full"] }
futures = "0.3.28"

[dependencies.mongodb]
version = "3.0.0"
